Show only the Accepted / Featured Sessions

--- a/config/sync/views.view.session_archive.yml
+++ b/config/sync/views.view.session_archive.yml
@@ -342,6 +342,48 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
+        field_status_value:
+          id: field_status_value
+          table: node__field_status
+          field: field_status_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: list_field
+          operator: or
+          value:
+            accepted: accepted
+            featured: featured
+          group: 1
+          exposed: false
+          expose:
+            operator_id: field_status_value_op
+            label: 'Status (field_status)'
+            description: null
+            use_operator: false
+            operator: field_status_value_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_status_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
       filter_groups:
         operator: AND
         groups:
