--- a/web/themes/custom/govcon/govcon.libraries.yml
+++ b/web/themes/custom/govcon/govcon.libraries.yml
@@ -50,3 +50,8 @@ author:
   css:
     theme:
       dist/components/templates/author/author.css: {}
+
+session-speaker:  
+  css:
+    theme:
+      dist/components/organisms/session-speakers/session-speaker.css: {}
