--- a/config/sync/extlink.settings.yml
+++ b/config/sync/extlink.settings.yml
@@ -24,12 +24,15 @@ extlink_img_class: false
 extlink_css_exclude: ''
 extlink_css_include: ''
 extlink_css_explicit: ''
-extlink_mailto_class: mailto
+extlink_mailto_class: '0'
 extlink_mailto_label: '(link sends email)'
 extlink_tel_class: tel
 extlink_tel_label: '(link is a phone number)'
 extlink_use_font_awesome: false
-extlink_font_awesome_classes: {  }
+extlink_font_awesome_classes:
+  links: 'fa fa-external-link'
+  mailto: 'fa fa-envelope-o'
+  tel: 'fa fa-phone'
 extlink_icon_placement: append
 extlink_prevent_orphan: true
 whitelisted_domains: {  }
