--- a/config/sync/field.field.node.session_archive.field_session_date_time.yml
+++ b/config/sync/field.field.node.session_archive.field_session_date_time.yml
@@ -12,7 +12,7 @@ field_name: field_session_date_time
 entity_type: node
 bundle: session_archive
 label: 'Date / Time'
-description: ''
+description: 'Select a date and time. The time will be displayed in Eastern Daylight Time (EDT) on the site.
 required: false
 translatable: false
 default_value: {  }
