--- a/config/sync/views.view.sponsors.yml
+++ b/config/sync/views.view.sponsors.yml
@@ -387,6 +387,7 @@ display:
           plugin_id: standard
           required: true
       use_ajax: true
+      group_by: true
       header: {  }
       footer: {  }
       display_extenders: {  }
