DGC-49: Updating the view dynamically using conference year filter. (#135)

--- a/web/modules/custom/govcon_custom/govcon_custom.links.menu.yml
+++ b/web/modules/custom/govcon_custom/govcon_custom.links.menu.yml
@@ -5,7 +5,7 @@ govcon_custom.settings:
   route_name: govcon_custom.settings
 
 govcon_custom.footer_settings_form:
-  title: 'Footer Settings'
-  description: 'Configure custom footer settings.'
+  title: 'Site Settings'
+  description: 'Configure custom site settings.'
   parent: govcon_custom.settings
   route_name: govcon_custom.footer_settings_form
