--- a/config/sync/views.view.announcements.yml
+++ b/config/sync/views.view.announcements.yml
@@ -6,9 +6,13 @@ dependencies:
     - core.entity_view_mode.node.listing_view
     - core.entity_view_mode.node.recent_announcement
     - node.type.special_announcement
+    - taxonomy.vocabulary.conference_year
+  content:
+    - 'taxonomy_term:conference_year:5c129028-0730-4bd4-92e6-8a51e89da31e'
   module:
     - datetime
     - node
+    - taxonomy
     - user
 id: announcements
 label: Announcements
@@ -113,8 +117,8 @@ display:
         options: {  }
       empty: {  }
       sorts:
-        field_important_date_value:
-          id: field_important_date_value
+        field_important_date_value_1:
+          id: field_important_date_value_1
           table: node__field_important_date
           field: field_important_date_value
           relationship: none
@@ -149,6 +153,52 @@ display:
           plugin_id: bundle
           value:
             special_announcement: special_announcement
+        field_conference_year_target_id:
+          id: field_conference_year_target_id
+          table: node__field_conference_year
+          field: field_conference_year_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: taxonomy_index_tid
+          operator: or
+          value:
+            23: 23
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          vid: conference_year
+          type: select
+          hierarchy: false
+          limit: true
+          error_message: true
       style:
         type: default
         options:
@@ -226,6 +276,52 @@ display:
           plugin_id: bundle
           value:
             special_announcement: special_announcement
+        field_conference_year_target_id:
+          id: field_conference_year_target_id
+          table: node__field_conference_year
+          field: field_conference_year_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: taxonomy_index_tid
+          operator: or
+          value:
+            23: 23
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          vid: conference_year
+          type: select
+          hierarchy: false
+          limit: true
+          error_message: true
       filter_groups:
         operator: AND
         groups:
@@ -255,6 +351,20 @@ display:
     display_options:
       title: ''
       sorts:
+        field_important_date_value:
+          id: field_important_date_value
+          table: node__field_important_date
+          field: field_important_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: datetime
+          order: DESC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
+          granularity: second
         created:
           id: created
           table: node_field_data
