--- a/web/modules/custom/govcon_custom/govcon_custom.routing.yml
+++ b/web/modules/custom/govcon_custom/govcon_custom.routing.yml
@@ -10,6 +10,6 @@ govcon_custom.footer_settings_form:
   path: '/admin/config/govcon-custom/footer-settings'
   defaults:
     _form: '\Drupal\govcon_custom\Form\FooterSettingsForm'
-    _title: 'Footer Settings'
+    _title: 'Site Settings'
   requirements:
-    _permission: 'manage custom footer configurations'
+    _permission: 'manage custom site configurations'
