--- a/config/sync/field.field.node.session_archive.field_supporting_documents.yml
+++ b/config/sync/field.field.node.session_archive.field_supporting_documents.yml
@@ -21,7 +21,7 @@ settings:
   handler: 'default:file'
   handler_settings: {  }
   file_directory: '[date:custom:Y]-[date:custom:m]'
-  file_extensions: 'txt pptx ppt'
+  file_extensions: 'txt pptx ppt pdf'
   max_filesize: ''
   description_field: false
 field_type: file
