DGC-170: Updated image style for logos in sponsors views page. (#154)

--- a/config/sync/core.entity_view_display.node.sponsor.sponsor_teaser.yml
+++ b/config/sync/core.entity_view_display.node.sponsor.sponsor_teaser.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.sponsor.field_sponsor_logo
     - field.field.node.sponsor.field_sponsor_url
     - field.field.node.sponsor.field_sponsorship_level
+    - image.style.medium
     - node.type.sponsor
   module:
     - image
@@ -37,7 +38,7 @@ content:
     label: above
     settings:
       image_link: ''
-      image_style: ''
+      image_style: medium
       image_loading:
         attribute: lazy
     third_party_settings: {  }
