DGC-000: Update the local setting override. (#155)

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 
 # Ignore paths that contain user-generated content.
 /web/sites/default/files/
+/web/sites/default/settings.local.php
 /web/sites/default/private/
 /private_files/
 
