--- a/config/sync/views.view.sponsors.yml
+++ b/config/sync/views.view.sponsors.yml
@@ -296,6 +296,19 @@ display:
         options: {  }
       empty: {  }
       sorts:
+        field_weight_value:
+          id: field_weight_value
+          table: node__field_weight
+          field: field_weight_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          order: DESC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
         weight:
           id: weight
           table: taxonomy_term_field_data
