--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.5",
+        "drupal/agg_jscss_asyncdefer": "^1.0",
         "drupal/coffee": "^2.0",
         "drupal/components": "^3.1",
         "drupal/config_ignore": "^3.3",
