--- a/config/sync/node.type.session_archive.yml
+++ b/config/sync/node.type.session_archive.yml
@@ -10,8 +10,8 @@ third_party_settings:
     parent: ''
 name: 'Session Archive'
 type: session_archive
-description: null
+description: 'This content type stores the Archived Sessions.'
 help: null
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
