--- a/config/sync/node.type.sponsor.yml
+++ b/config/sync/node.type.sponsor.yml
@@ -10,8 +10,8 @@ third_party_settings:
     parent: ''
 name: Sponsor
 type: sponsor
-description: null
+description: 'This content type stores the different Sponsors on the site.'
 help: null
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
