--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "docs": "https://www.drupal.org/docs/user_guide/en/index.html"
     },
     "require": {
+        "acquia/drupal-environment-detector": "^1.7",
         "acquia/drupal-recommended-settings": "^1.1",
         "composer/installers": "^2.0",
         "drupal/acquia_connector": "^4.1",
